# distill_cot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.py
.github/workflows/: pre-commit.yml
distill_cot/data/: dataset.py
distill_cot/training/: trainer.py
distill_cot/utils/: config.py
examples/: base_config.yaml  config_example.py  deepseek_config.yaml  llm_config.yaml  test_import.py
src/data/: create_data.py
src/models/: student.py  teacher.py
src/utils/: config.py
