[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distill_cot"
version = "0.1.0"
description = "A Python project for training and fine-tuning language models with Chain-of-Thought reasoning capabilities"
readme = "README.md"
authors = [
    { name = "Cong Pham", email = "congphamba2005@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers==4.40.0",
    "datasets>=2.12.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.41.0",
    "peft>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/distill_cot"
Repository = "https://github.com/yourusername/distill_cot.git"
Documentation = "https://github.com/yourusername/distill_cot#readme"
"Bug Tracker" = "https://github.com/yourusername/distill_cot/issues"

[tool.setuptools]
packages = ["distill_cot"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=distill_cot"
testpaths = [
    "tests",
]
